tests/ui/pattern/array-length-mismatch-13482.stderr
error[E0527]: pattern requires 0 elements but array has 2
  --> $DIR/array-length-mismatch-13482.rs:6:5
   |
LL |     [] => None,
   |     ^^ expected 2 elements

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0527`.
